--- a/webpage/navmenu.html
+++ b/webpage/navmenu.html
@@ -11,11 +11,48 @@
 	</div>
 	<div class="menu-list">
 		<ul>
-			<li>商品管理</li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li class="hbj1">商品管理
+				<ul>
+					<li>商品列表</li>
+					<li>添加新商品</li>
+					<li>商品分类</li>
+					<li>用户评论</li>
+					<li>商品品牌</li>
+					<li>商品类型</li>
+					<li>商品回收站</li>
+					<li>图片批量处理</li>
+					<li>图片批量上传</li>
+					<li>商品批量导出</li>
+					<li>商品批量修改</li>
+					<li>生成品代码</li>
+					<li>标签管理</li>
+					<li>虚拟商品列表</li>
+					<li>添加虚拟商品</li>
+					<li>更改加密串</li>
+					<li>商品自动下架</li>
+				</ul>
+			</li>
+			<li class="hbj1">商品管理
+				<ul>
+					<li>商品列表</li>
+					<li>添加新商品</li>
+					<li>商品分类</li>
+					<li>用户评论</li>
+					<li>商品品牌</li>
+					<li>商品类型</li>
+					<li>商品回收站</li>
+					<li>图片批量处理</li>
+					<li>图片批量上传</li>
+					<li>商品批量导出</li>
+					<li>商品批量修改</li>
+					<li>生成品代码</li>
+					<li>标签管理</li>
+					<li>虚拟商品列表</li>
+					<li>添加虚拟商品</li>
+					<li>更改加密串</li>
+					<li>商品自动下架</li>
+				</ul>
+			</li>
 		</ul>
 	</div>
 	
