--- a/webpage/after.html
+++ b/webpage/after.html
@@ -10,7 +10,10 @@
 		<frameset cols="180, 10, *" framespacing="0" border="0" id="frame-body">
 		   			<frame src="navmenu.html" id="menu-frame" name="menu-frame" frameborder="no" scrolling="yes">
 		   			<frame src="small.html" id="drag-frame" name="drag-frame" frameborder="no" scrolling="no">
-		   			<frame src="new.html" id="main-frame" name="main-frame" frameborder="no" scrolling="yes">
+		   			<frame src="shoptab.html" id="main-frame" name="main-frame" frameborder="no" scrolling="yes">
 		  </frameset>
 		  </frameset>
 </html>
+<script>
+	
+</script>
